# player-triage-app-spec

./: .gitattributes  .gitignore  HANDOVER.md  README.md  SETUP_PLAYER_TRIAGE.bat  START_HERE.txt  START_PLAYER_TRIAGE.bat  manifest.json  pyproject.toml  requirements-lock.txt  run_console.bat  run_console.ps1  setup_windows.bat  setup_windows.ps1  validation_report.txt
.streamlit/: config.toml
coding_runbook/: PHASES.md  README.md  agent_operating_rules.md  phase_report_template.md
coding_runbook/prompts/: 00_repository_audit.md  01_scaffold_and_config.md  (+7 more)
docs/: data_handling_notice.md  decision_log_outline.md  phase_09.md
input/: dataset_player_messages.csv  dataset_player_messages.xlsx
policy/: README.md  application_requirements.json  auto_response_templates.json  baseline_intent_rules.json  classifier_prompt.txt  configuration_manifest.json  controlled_vocabularies.json  deferred_production_controls.md  evaluation_policy.md  export_contract.json  ground_truth_40.csv  ground_truth_40.jsonl  intents.json  linkage_policy.json  market_overlays.json  model_contract.md  policy_rules.json  rationale_templates.json  redaction_policy.json  research_traceability.json  rule_dsl.md  safety_assertions.json  semantic_constraints.json  stage9_policy_spec.md  taxonomy.json  teams.json  ui_editability.json
schemas/: audit_event_schema.json  auto_response_templates_schema.json  baseline_rules_schema.json  config_bundle_schema.json  derived_refinement_rules_schema.json  detection_result_schema.json  evaluation_summary_schema.json  ground_truth_schema.json  imported_audit_event_schema.json  imported_decision_schema.json  imported_output_schema.json  market_overlays_schema.json  model_candidate_schema.json  model_configuration_schema.json  output_schema.json  policy_rules_schema.json  rationale_templates_schema.json  redaction_policy_schema.json  semantic_constraints_schema.json
submission/: ARCHITECTURE.md  DECISION_LOG.md  README.md  SUBMISSION_MANIFEST.json
tests/: conftest.py  test_cli.py  test_cli_ingest.py  test_controlled_vocabulary.py  test_detection.py  test_error_sanitization.py  test_happy_path.py  test_ingestion.py  test_invalid_json.py  test_linkage.py  test_missing_files.py  test_multilingual.py  test_no_enum_duplication.py  test_no_network_and_sanitized.py  test_normalization.py  test_paths.py  test_phase03_derived.py  test_phase03_engine.py  test_phase03_no_vocab_drift.py  test_phase03_units.py  test_phase03c_governance.py  test_phase03c_holdout.py  test_phase03d_holdout_v2.py  test_phase03d_regression.py  test_phase04_german_self_exclusion.py  test_phase04_model_contract.py  test_phase04_model_governance.py  test_phase04_model_integration.py  test_phase05_operational_pipeline.py  test_phase06_evaluation.py  test_phase07_console.py  test_phase09_batch_sizes.py  test_phase09_console_import.py  test_phase09_dashboard_import_workflow.py  test_phase09_dataset_context.py  test_phase09_import_ui.py  test_phase09_imported_identifiers.py  test_phase09_imported_runs.py  test_phase09_schema_compatibility.py  test_phase09_utf8_bom.py  (+5 more)
tools/: validate_application_spec.py  validate_policy_package.py
(+132 files in other folders)
