[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "player_triage"
version = "0.1.0"
description = "Local, provider-independent player-contact triage prototype implementing the frozen Stage 9 policy contract."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Proprietary"}
authors = [{name = "player_triage prototype"}]
dependencies = [
  "jsonschema==4.23.0",
  "referencing==0.35.1",
  "openpyxl==3.1.5",
  "typer==0.12.5",
  "click==8.1.7",
  "pydantic==2.9.2",
  "streamlit==1.41.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "mypy==1.11.2",
]
local_model = [
  "llama-cpp-python==0.3.34",
]

[project.scripts]
player-triage = "player_triage.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["player_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The default suite is the rules-only release suite: it must pass on a clean
# machine with no llama-cpp-python and no GGUF artifact. Tests that require a
# staged local-model artifact are marked `local_model` and excluded here.
# Run them deliberately with: pytest -m local_model
addopts = "-ra -m 'not local_model'"
python_files = ["test_*.py"]
markers = [
  "local_model: requires a deliberately staged local-model artifact; excluded from the default rules-only suite",
]

[tool.mypy]
python_version = "3.12"
packages = ["player_triage"]
mypy_path = "src"
strict_optional = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*", "referencing", "referencing.*", "openpyxl", "openpyxl.*"]
ignore_missing_imports = true
